--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
+    "react-tabs": "^3.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
