--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "chart.js": "^3.7.0",
+    "chart.js": "^3.0.0",
     "create-react-app": "^5.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "react-tabs": "^3.2.3",
+    "terminal-in-react": "^4.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
