--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.0.0",
+    "chartjs-adapter-luxon": "^1.1.0",
+    "chartjs-plugin-zoom": "^1.2.0",
     "create-react-app": "^5.0.0",
+    "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
